--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://yazanks.github.io/Qnar",
+  "homepage": "https://Qnarweb.com",
   "name": "qnar_frontend",
   "version": "0.1.0",
   "private": true,
@@ -26,9 +26,10 @@
     "wouter": "^3.3.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
