--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Qnarweb.com",
+  "homepage": "http://Qnarweb.com",
   "name": "qnar_frontend",
   "version": "0.1.0",
   "private": true,
