--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.5",
+    "emailjs-com": "^3.2.0",
     "i18next": "^23.15.1",
     "react": "^18.3.1",
     "react-custom-roulette": "^1.4.1",
