--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.3.1",
+    "react-full-screen": "^1.1.1",
     "react-i18next": "^15.0.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
