--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "emailjs-com": "^3.2.0",
     "express": "^4.21.1",
     "i18next": "^23.15.1",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-full-screen": "^1.1.1",
     "react-i18next": "^15.0.2",
+    "react-leaflet": "^4.2.1",
+    "react-mobile-fullscreen": "^1.0.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-use": "^17.5.1",
